compiler/testData/diagnostics/tests/annotations/typeParameterAsAnnotation.kt
class Foo<T> {
    @<!NOT_A_CLASS!>T<!>
    fun foo() = 0
}

class Bar<T : Annotation> {
    @<!NOT_A_CLASS!>T<!>
    fun foo() = 0
}